[gd_scene load_steps=4 format=3 uid="uid://cm3lvrxvy4p4g"]

[ext_resource type="PackedScene" uid="uid://ixkwfi3tpv32" path="res://src/scenes/world/buildings/building.tscn" id="1_blxwf"]
[ext_resource type="Script" path="res://src/scenes/world/buildings/broken_building.gd" id="2_h5d1u"]
[ext_resource type="PackedScene" uid="uid://ctbvcgw6ly1dy" path="res://src/scenes/ui/misc/repair_ask.tscn" id="3_wlmvc"]

[node name="BrokenBuilding" instance=ExtResource("1_blxwf")]
script = ExtResource("2_h5d1u")
needed_ingdidients = Array[Resource("res://src/resources/crafting/crafting_ingridient.gd")]([])
switch_to = null

[node name="RepairAsk" parent="." index="2" instance=ExtResource("3_wlmvc")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="repaired" from="RepairAsk" to="." method="_on_repair_ask_repaired"]
